@@ -102,10 +102,6 @@ E. To do
       man page fvwm-colorsets.1 (I prefer fvwm.1).
       [Mikhael]
 
-  E.5 Disable Tear-off Menu by default (add --enable-tear-off-menu
-      option to configure?)
-      [dv: nope, please no more configure options]
-
   E.6 Rename FvwmProxy
       [dv: added on 02-Mar-2003]
 
@@ -276,6 +272,11 @@ G. Testing
       [Olivier]
       [dv: why does this have to be in 2.6?  we are in feature freeze]
       [done 2003-04-14]
+
+  E.5 Disable Tear-off Menu by default (add --enable-tear-off-menu
+      option to configure?)
+      [dv: nope, please no more configure options]
+      [dv: 8-Jul-2003: documented them instead]
 
   E.8 Remove key release bindings
       [dv: added on 02-Mar-2003]
