@@ -24,6 +24,9 @@ Changes in development release 2.5.8 (not released yet)
   (default).  The method can be overridden manually if the
   detection does not work.
 
+* Fvwm supports tear off menus.  See the "Tear Off Menus" section
+  in the man page or press Backspace on any menu to try them out.
+
 * Added support for new BBC headlines in fvwm-menu-headlines, this
   replaces the old BBC-Worlds and BBC-SciTech headlines.
 
